--- a/teamBook.tex
+++ b/teamBook.tex
@@ -7,6 +7,7 @@
 \titlepic{\includegraphics{resources/img/problem.jpg}}
 
 \begin{document}
+	\maketitle
 	\frontmatter
 		\tableofcontents
 	\mainmatter
@@ -14,6 +15,7 @@
 		\include{chapters/others}
 		%% Dynamic Programming
 		\include{chapters/dynamicProgramming}
+		%% String
+		\include{chapters/string}
 	\backmatter
-	\maketitle
 \end{document}
