--- a/teamBook.tex
+++ b/teamBook.tex
@@ -11,11 +11,21 @@
 	\frontmatter
 		\tableofcontents
 	\mainmatter
-		%% Other
-		\include{chapters/others}
+		%% Sort Algorithms
+		\include{chapters/sortAlgorithms}
+		%% Number Theory
+		\include{chapters/numberTheory}
+		%% Data Structures
+		\include{chapters/dataStructures}
 		%% Dynamic Programming
 		\include{chapters/dynamicProgramming}
+		%% Graphs
+		\include{chapters/graphs}
 		%% String
 		\include{chapters/string}
+		%% Computational Geometry
+		\include{chapters/computationalGeometry}
+		%% Other
+		\include{chapters/others}
 	\backmatter
 \end{document}
