List of contents

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,7 @@
-\usepackage[margin=1in]{geometry}
+\usepackage[lmargin=2in, bmargin=3in, rmargin=1in, tmargin=1in]{geometry}
 \usepackage[cc]{titlepic}
 \usepackage{graphicx}
+\usepackage{epigraph}
 \usepackage[T1]{fontenc}
 \renewcommand{\rmdefault}{ptm}
 \usepackage{listings}
