--- a/preamble.tex
+++ b/preamble.tex
@@ -1,4 +1,4 @@
-\usepackage[lmargin=2in, bmargin=3in, rmargin=1in, tmargin=1in]{geometry}
+\usepackage[margin=1in]{geometry}
 \usepackage[cc]{titlepic}
 \usepackage{graphicx}
 \usepackage{epigraph}
