--- a/preamble.tex
+++ b/preamble.tex
@@ -1,9 +1,8 @@
 \usepackage[margin=1in]{geometry}
 \usepackage[cc]{titlepic}
+%\usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage{epigraph}
-\usepackage[T1]{fontenc}
-\renewcommand{\rmdefault}{ptm}
 \usepackage{listings}
 \usepackage{color}
 \definecolor{mygreen}{rgb}{0,0.6,0}
